feat(customers): customer registrations and policy subscriptions